--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,5 +1,5 @@
 name: cavestory
-version: '2.6.2-snap1'
+version: '2.6.3-snap0'
 summary: Doukutsu Monogatari - Jump-and-run platformer
 description: |
   NXEngine Evo is a complete open-source clone/rewrite of the masterpiece
@@ -7,8 +7,9 @@ description: |
   NXEngine Evo [1] is an upgraded/refactored version of NXEngine by Caitlin Shaw [2].
   [1] https://github.com/nxengine/nxengine-evo
   [2] http://nxengine.sourceforge.net/
+base: core18
 
-grade: devel
+grade: stable
 confinement: strict
 
 apps:
@@ -21,8 +22,7 @@ apps:
     - x11
     - desktop
     - pulseaudio
-    - joystick # FIXME: Joystick doesn't work (yet)
-    - process-control # FIXME: Required to make audio work
+    - joystick
 
 parts:
   cavestory:
@@ -30,7 +30,7 @@ parts:
     source: https://www.cavestory.org/downloads/cavestoryen.zip
   nxengine-evo:
     plugin: cmake
-    source: https://github.com/nxengine/nxengine-evo/archive/v2.6.2.tar.gz
+    source: https://github.com/nxengine/nxengine-evo/archive/v2.6.3.tar.gz
     build-packages:
       - libsdl2-dev
       - libsdl2-mixer-dev
@@ -38,30 +38,30 @@ parts:
       - libpng-dev
     stage-packages:
       - libgl1-mesa-glx
-      - libglew1.13
+      - libglew2.0
       - libglu1-mesa
       - libsdl2-2.0-0
       - libsdl2-mixer-2.0-0
       - libsdl2-ttf-2.0-0
       - libpulse0
-    build: |
-      mkdir build && cd build
-      cmake -DCMAKE_BUILD_TYPE=Release ..
-      make
-      cd ../
-      cp -r bin/ $SNAPCRAFT_PART_INSTALL/
-    install: |
-      # Extract and install data
-      cp ../../cavestory/src/CaveStory/Doukutsu.exe .
-      ./bin/extract
-      cp -r ../../cavestory/src/CaveStory/data/* data
-      cp -r data/ $SNAPCRAFT_PART_INSTALL/bin
+    override-build: |
+        cp -r ../src/* .
+        mkdir build && cd build
+        cmake -DCMAKE_BUILD_TYPE=Release ..
+        make
+        cd ../
+        cp -r bin/ $SNAPCRAFT_PART_INSTALL/
+        # Extract and install data
+        cp ../../cavestory/src/CaveStory/Doukutsu.exe .
+        ./bin/extract
+        cp -r ../../cavestory/src/CaveStory/data/* data
+        cp -r data/ $SNAPCRAFT_PART_INSTALL/bin
     after:
       - cavestory
-      - desktop-glib-only
+      - glib-only
   translations:
     plugin: dump
-    source: https://github.com/nxengine/translations/releases/download/v1.2/all.zip
+    source: https://github.com/nxengine/translations/releases/download/v1.5/all.zip
     organize:
       data: bin/data
     prime:
@@ -69,3 +69,11 @@ parts:
     after:
       - cavestory
       - nxengine-evo
+  glib-only:
+    source: https://github.com/ubuntu/snapcraft-desktop-helpers.git
+    source-subdir: glib-only
+    plugin: make
+    build-packages:
+      - libglib2.0-dev
+    stage-packages:
+      - libglib2.0-bin
